# agent

./: .env.example  .gitignore  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: test.yml
docs/: HANDOFF.md  embedding-zilliz-design.md  langgraph-phase2-design.md  phase1-memory-evolution-checklist.md
docs/superpowers/plans/: 2026-07-06-memory-evolution-mvp.md
docs/superpowers/specs/: 2026-07-06-memory-evolution-mvp-design.md
src/agent_app/: __init__.py  agent.py  bootstrap.py  cli.py  config.py  doctor.py  embeddings.py  inspection_report.py  langgraph_agent.py  llm.py  memory.py  memory_evolution.py  policies.py  prompts.py  record_stores.py  reflection.py  runtime_agent.py  semantic_memory.py  semantic_memory_repository.py  semantic_store.py  sqlite_records.py  sqlite_schema.py  storage_utils.py  store.py  thread_inspection.py  thread_state.py  vector_memory.py  vector_smoke.py  zilliz.py
tests/: test_agent.py  test_cli.py  test_config.py  test_doctor.py  test_embeddings.py  test_langgraph_agent.py  test_memory.py  test_memory_evolution.py  test_policies.py  test_semantic_memory.py  test_semantic_memory_repository.py  test_sqlite_records.py  test_sqlite_schema.py  test_storage_utils.py  test_store.py  test_vector_memory.py  test_vector_smoke.py  test_zilliz.py
