[project]
name = "agent"
version = "0.1.0"
description = "A conversational agent with persistent self-learning memory."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
agent-chat = "agent_app.cli:main"
agent-doctor = "agent_app.doctor:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
