[project]
name = "agent"
version = "0.1.0"
description = "A conversational agent with persistent self-learning memory."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-openai>=0.3.0",
    "langgraph>=0.4.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "openai>=1.0.0",
    "pymilvus>=2.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
agent-chat = "agent_app.cli:main"
agent-doctor = "agent_app.doctor:main"
agent-zilliz-init = "agent_app.zilliz:main"
agent-vector-smoke = "agent_app.vector_smoke:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
